# discohack

./: .gitignore  README.md  adapter.py  auth.py  cache.py  cloud_daemon.py  deploy-desktop.sh  engine.py  main.py  oath.py  plug.desktop  pyproject.toml  service.py  test_fuse.py
gdrive_service/: requirements.txt
gdrive_service/app/: main.py
gdrive_service/app/api/: dependencies.py
gdrive_service/app/api/routes/: health.py  resources.py
gdrive_service/app/clients/: google_drive.py
gdrive_service/app/schemas/: resources.py
