[project]
name = "discohack"
version = "0.1.0"
description = "CloudFUSE: Multi-cloud engine with metadata caching"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fusepy>=3.0.1",
    "requests>=2.31.0",
    "urllib3>=2.2.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"